# fastapi-support-agent-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  LEARNING_JOURNEY.md  README.md  WRITEUP.md  main.py  pyproject.toml  render.yaml
docker/: Dockerfile
eval_runs/: eval_20260715T180856Z_eaa36be.json  eval_20260716T043340Z_8de7a42.json
scripts/: build_index.py  fetch_docs.py  run_eval.py  test_gateway.py
src/fastapi_support_agent/agents/: graph.py
src/fastapi_support_agent/api/: main.py
src/fastapi_support_agent/api/static/: app.js  index.html  style.css
src/fastapi_support_agent/eval/: golden_set.json  judge.py
src/fastapi_support_agent/gateway/: __init__.py  client.py  content.py  tracking.py
src/fastapi_support_agent/rag/: chunking.py  retrieval.py  synthesis.py
src/fastapi_support_agent/tools/: changelog.py  docs_search.py  github_issues.py
