[project]
name = "fastapi-support-agent"
version = "0.1.0"
description = "A support/ops agent for FastAPI: hybrid-search doc RAG with citations, changelog/deprecation lookup, GitHub issue search, LangGraph multi-agent orchestration with human-in-the-loop approval, and an eval/guardrail/gateway layer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langsmith>=0.10.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]
